[gd_scene load_steps=5 format=3 uid="uid://7n0k02ba5d6h"]

[ext_resource type="Script" path="res://scripts/states/states_manager.gd" id="1_f10gj"]
[ext_resource type="Script" path="res://scripts/states/player/attack/attack_idle.gd" id="2_w0k3k"]
[ext_resource type="Script" path="res://scripts/states/player/attack/light_attack.gd" id="3_45q17"]
[ext_resource type="Script" path="res://scripts/states/player/attack/jump_attack.gd" id="4_qmuqb"]

[node name="AttackStateManager" type="Node"]
script = ExtResource("1_f10gj")
initial_state_name = "AttackIdle"

[node name="AttackIdle" type="Node" parent="."]
script = ExtResource("2_w0k3k")

[node name="LightAttack" type="Node" parent="."]
script = ExtResource("3_45q17")

[node name="JumpAttack" type="Node" parent="."]
script = ExtResource("4_qmuqb")
